# multibranch

./: .pre-commit-config.yaml  README.md  pyproject.toml
multibranch/: hooks.py
multibranch/fixtures/: custom_field.json  property_setter.json
multibranch/multibranch/apis/: filtering_profiles.py
multibranch/public/js/: delivery_note.js  material_request.js  purchase_invoice.js  purchase_order.js  purchase_receipt.js  sales_invoice.js  sales_order.js  stock_entry.js
